# dapla-auth-client

./: .cookiecutter.json  .cruft.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  backstage.yaml  flake.nix  noxfile.py  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: constraints.txt  docs.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md
src/dapla_auth_client/: __init__.py  auth.py
tests/: __init__.py  test_auth.py
