[project]
name = "dapla-auth-client"
version = "1.2.3"
description = "Dapla Auth Client"
authors = [{ name = "Dapla Developers", email = "dapla-platform-developers@ssb.no" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = ["Development Status :: 5 - Production/Stable"]
dependencies = [
    "requests>=2.27.1",
    "google-auth>=2.40.2",
    "deprecated>=1.2.18",
    "types-requests>=2.28.11",
    "responses>=0.24.0",
    "types-deprecated>=1.2.15.20250304",
]

[project.urls]
Homepage = "https://github.com/statisticsnorway/dapla-auth-client"
Repository = "https://github.com/statisticsnorway/dapla-auth-client"
Documentation = "https://statisticsnorway.github.io/dapla-auth-client"
Changelog = "https://github.com/statisticsnorway/dapla-auth-client/releases"

[project.scripts]
dapla-auth-client = "dapla_auth_client.__main__:main"

[dependency-groups]
lint = [
    "black[jupyter]>=25.11.0",
    "pre-commit>=4.4.0",
    "pre-commit-hooks>=6.0.0",
    "pydoclint>=0.8.3",
    "ruff>=0.14.5",
]
doc = [
    "furo>=2025.9.25; python_version >= '3.11'",
    "myst-parser>=4.0.1; python_version >= '3.11'",
    "sphinx>=8.2.3; python_version >= '3.11'",
    "sphinx-autobuild>=2025.8.25; python_version >= '3.11'",
    "sphinx-autodoc-typehints>=3.5.2; python_version >= '3.11'",
    "sphinx-click>=6.1.0; python_version >= '3.11'",
]
dev = [
    "pygments>=2.10.0",
    {include-group = "lint"},
    {include-group = "doc"},
    "coverage[toml]>=7.11.3",
    "deptry>=0.24.0",
    "mypy>=1.18.2",
    "pygments>=2.19.0",
    "pytest>=9.0.0",
    "typeguard>=2.13.3",
    "xdoctest[colors]>=1.3.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/dapla_auth_client"]

[tool.hatch.build.targets.wheel]
include = ["src/dapla_auth_client"]

[tool.hatch.build.targets.wheel.sources]
"src/dapla_auth_client" = "dapla_auth_client"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["dapla_auth_client", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
force-exclude = true  # Apply excludes to pre-commit
show-fixes = true
src = ["src", "tests"]
target-version = "py311"  # Minimum Python version supported
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
extend-exclude = [
    "__pycache__",
    "old",
    ".ipynb_checkpoints",
    "noxfile.py",
    "docs/conf.py",
]
external = ["DOC"]

# Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "A",   # prevent using keywords that clobber python builtins
    "ANN", # check type annotations
    "B",   # bugbear: security warnings
    "D",   # documentation
    "E",   # pycodestyle
    "F",   # pyflakes
    "ISC", # implicit string concatenation
    "I",   # sort imports
    "UP",  # alert you when better syntax is available in your python version
    "RUF", # the ruff developer's own rules
]
ignore = [
    "ANN101", # Supress missing-type-self.
    "ANN102", # Supress missing-type-cls.
    "ANN202", # Don't requiere return type annotation for private functions.
    "ANN401", # Allow type annotation with type Any.
    "D100",   # Supress undocumented-public-module. Only doc of public api required.
    "E402",   # Supress module-import-not-at-top-of-file, needed in jupyter notebooks.
    "E501",   # Supress line-too-long warnings: trust black's judgement on this one.
    "UP007",  # ADDED MANUALLY - makes it possible to use the Optional[] syntax
    "B904",
    "ANN003",
    "ANN002",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"  # You can also use "numpy".

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "validator", "root_validator", "pydantic.validator"]

[tool.pydoclint]
style = "google"
exclude = '\.git|\.nox'
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
allow-init-docstring = true
quiet = true

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"**/tests/*" = [
    "ANN001",  # type annotations don't add value for test functions
    "ANN002",  # type annotations don't add value for test functions
    "ANN003",  # type annotations don't add value for test functions
    "ANN201",  # type annotations don't add value for test functions
    "ANN204",  # type annotations don't add value for test functions
    "ANN205",  # type annotations don't add value for test functions
    "ANN206",  # type annotations don't add value for test functions
    "D100",    # docstrings are overkill for test functions
    "D101",
    "D102",
    "D103",
    "S101",    # asserts are encouraged in pytest
]
